--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -652,7 +652,7 @@ a {
 		font-size: 16px !important;
 		line-height: 25px !important;
 		left: 4px !important;
-		top: 6px !important;
+		top: 6px
 	}
 	.change-password-content .form-wrap .btn-wrap{
 		column-gap: 3px !important;
